# turing-complete-interface

./: LICENSE  MANIFEST.in  README.md  calculate_delays.py  circuit_compiler.py  circuit_parser.py  circuit_viewer.py  example.py  logic_nodes.py  rom_to_cc.py  setup.cfg  specification_parser.py  specification_tester.py  test_font.py  world_view.py
components/arithmetic/: adder_2w4.spec  half_adder.spec
components/basic/: not.spec
components/logic/: and_1w16.spec  and_2w1.spec  and_2w16.spec  and_2w4.spec  and_2w8.spec  and_3w1.spec  not_1w16.spec  or_1w4.spec  or_1w8.spec
components/memory/: counter_4.spec  register_4.spec  register_8.spec  tc_register_8.spec
components/plexers/: switch_1w8.spec
components/tc_utils/: bigger_demux.spec  byte_equal.spec  byte_splitter.spec  tc_demux.spec
turing_complete_interface/: circuit_builder.py  circuit_compiler.py  circuit_parser.py  circuit_viewer.py  circuit_viewer_with_ascii.py  from_logic_expression.py  from_truth_table.py  from_verilog.py  level_layouts.json  level_layouts.py  level_spaces.json  logic_nodes.py  save_monger.nim  scripts.py  specification_parser.py  specification_tester.py  tc_assembler.py  tc_components.json  tc_components.py  truth_table.py  verilog_components.json  verilog_parser.py  world_view.py
turing_complete_interface/components/arithmetic/: adder_2w1.spec  adder_2w16.spec  adder_2w4.spec  adder_2w8.spec  half_adder.spec  tc_partial_adder_2w8.spec
turing_complete_interface/components/logic/: and_1w4.spec  and_3w1.spec  and_4w1.spec  nor_2w1.spec  not_1w1.spec  not_1w4.spec  not_1w8.spec  (+10 more)
(+18 files in other folders)
