[metadata]
name = turing_complete_interface
version = 0.0.1
author = MegaIng
author_email = trampchamp@hotmail.de
url = https://github.com/MegaIng/logic_nodes

[options]
packages = turing_complete_interface
include_package_data = True
install_requires =
    pygame
    frozendict
    bitarray
    lark @ git+https://github.com/lark-parser/lark
    tree_ql @ git+https://github.com/adbancroft/tree_ql
    prompt_toolkit
